[workspace.package]
edition = "2024"
version = "0.3.1-pre.6"
authors = [
    "RCore Team <yuchen@tsinghua.edu.cn>",
]
license = "Apache-2.0"
homepage = "https://github.com/rcore-os/tgoskits"
repository = "https://github.com/rcore-os/tgoskits"

[workspace]
resolver = "3"
members = [
    # components
    "components/aarch64_sysreg",
    "components/arm_pl011",
    "components/arm_pl031",
    "components/arm_vcpu",
    "components/arm_vgic",
    "components/axaddrspace",
    "components/axallocator",
    "components/axbacktrace",
    "components/axdevice",
    "components/axdevice_base",
    "components/axerrno",
    "components/axfs-ng-vfs",
    "components/axhvc",
    "components/axio",
    "components/axklib",
    "components/axpoll",
    "components/axsched",
    "components/axvcpu",
    "components/axvm",
    "components/axvmconfig",
    "components/bitmap-allocator",
    "components/cap_access",
    "components/cpumask",
    "components/handler_table",
    "components/int_ratio",
    "components/kernel_guard",
    "components/kspin",
    "components/lazyinit",
    "components/linked_list_r4l",
    "components/range-alloc-arceos",
    "components/riscv-h",
    "components/riscv_plic",
    "components/riscv_vcpu",
    "components/riscv_vplic",
    "components/rsext4",
    "components/scope-local",
    "components/starry-process",
    "components/starry-signal",
    "components/starry-smoltcp",
    "components/starry-vm",
    "components/timer_list",
    "components/virtio-drivers",

    # os/arceos/modules
    "os/arceos/modules/axalloc",
    "os/arceos/modules/axconfig",
    "os/arceos/modules/axdisplay",
    "os/arceos/modules/axdma",
    "os/arceos/modules/axdriver",
    "os/arceos/modules/axfs",
    "os/arceos/modules/axfs-ng",
    "os/arceos/modules/axhal",
    "os/arceos/modules/axinput",
    "os/arceos/modules/axipi",
    "os/arceos/modules/axlog",
    "os/arceos/modules/axmm",
    "os/arceos/modules/axnet",
    "os/arceos/modules/axnet-ng",
    "os/arceos/modules/axplat-dyn",
    "os/arceos/modules/axruntime",
    "os/arceos/modules/axsync",
    "os/arceos/modules/axtask",

    # os/arceos/api
    "os/arceos/api/axfeat",
    "os/arceos/api/arceos_api",
    "os/arceos/api/arceos_posix_api",

    # os/arceos/ulib
    "os/arceos/ulib/axstd",
    "os/arceos/ulib/axlibc",

    # os/arceos/examples
    "os/arceos/examples/helloworld",
    "os/arceos/examples/helloworld-myplat",
    "os/arceos/examples/httpclient",
    "os/arceos/examples/httpserver",
    "os/arceos/examples/shell",

    # os/axvisor
    "os/axvisor",

    # virtio-drivers examples
    "components/virtio-drivers/examples/aarch64",
    "components/virtio-drivers/examples/hexagon",
    "components/virtio-drivers/examples/riscv",
    "components/virtio-drivers/examples/x86_64",
    "components/virtio-drivers/examples/vsock_server",
]
exclude = [
    # workspace directories
    "components/axplat_crates",
    "os/arceos",
    "os/StarryOS",
    "components/percpu",
    "components/axvisor_api",
    "components/crate_interface",
    "components/ctor_bare",
    "components/page_table_multiarch",
    "components/axconfig-gen",
    "components/axdriver_crates",
    "components/axmm_crates",
    "components/starry-smoltcp/fuzz",
    "components/crate_interface/test_crates",
]
